--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@ body, h1,h2,h3,h4,h5,h6 {font-family: "Montserrat", sans-serif}
     <hr style="width:200px" class="w3-opacity">
     <p>
       
-I'm really interested in math and I think there is a certain beauty in developing the geometric intuition behind ML techniques we know (the proof of Linear Least Squares Regression by using it's implicit orthogonality properties comes to mind)<br /><br />
+I'm really interested in math and I think there is a certain beauty in developing the geometric intuition behind ML techniques we know.<br /><br />
 
 I am increasingly interested in the thin intersection between Computer Science and Electrical Engineering.<br />
 In November 2019 I will be applying for PhD programs that focus on (Medical) Image Analysis and Computer Vision.<br /><br />
@@ -70,7 +70,7 @@ In November 2019 I will be applying for PhD programs that focus on (Medical) Ima
 I've recently been trying to read about Convolutional Nets, Unsupervised Deep Learning techniques, and Regression.<br />
 (My current mini goal is to learn some Unsupervised DL algorithms and apply them to Medical Image Challenges)<br /><br />
 
-I owe a great many thanks to Prof David Gleich and his graduate students at Purdue University, who have encouraged my interest in research and who have been patiently helping me overcome my lack of experience and direction.  I worked on a project with D. Gleich and Nate Veldt (website link) involving parallelizing some Graph Clustering techniques.  We have written a paper over this work and are currently working to submit it to different conferences.<br /><br />
+I owe a great many thanks to Prof David Gleich and his graduate students at Purdue University, who have encouraged my interest in research and who have been patiently helping me overcome my lack of experience and direction.  I worked on a project with D. Gleich and Nate Veldt (<a href="https://www.math.purdue.edu/~lveldt/">Nate Vedlt</a>) involving parallelizing some Graph Clustering techniques.  We have written a paper over this work and are currently working to submit it to different conferences.<br /><br />
 Here is the arxiv link for those interested. https://arxiv.org/abs/1901.10084<br /><br />
 Short Summary: In metric constrained optimization, it is possible to update multiple variables at a time without violating constraints or correctness.  I found a method that can handle O(n) variable updates at the same time, out of O(n^3) variable updates in total.<br />
 This work has certainly sparked my interest in research, and as I expand my mathematical ability beyond that of an undergraduate, I hope to be able to tackle more challenging research contributions.<br /><br />
