--- a/index.html
+++ b/index.html
@@ -32,12 +32,12 @@
 	</p>
 </div>
 
-<div>
+<!-- <div>
 	<h2>Other</h2>
 	<p>
 		 My PR for running one mile is 6:30.  This is clearly more important than research experience.
 	</p>
-</div>
+</div> -->
 
 
 </body>
