--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
 		<h1>Cameron Ruggles</h1>
 		<p>Purdue University, Computer Science</p>
 
-	<h2>My Academic Experience</h2>
+	<h2 style="font-family:Courier;">My Academic Experience</h2>
 	<p>
-		I owe a great many thanks to <a href="https://www.cs.purdue.edu/homes/dgleich/">Prof David Gleich</a> and his graduate students at Purdue University, who have encouraged my interest in research and who have been patiently helping me get off the ground.  
+		I owe a great many thanks to <a href="https://www.cs.purdue.edu/homes/dgleich/">Prof David Gleich</a> and his graduate students at Purdue University, who have encouraged my interest in research and who have been patiently helping me get off the ground.
 
 		I worked on a project with D. Gleich and  <a href="https://www.math.purdue.edu/~lveldt/">Nate Veldt</a> involving parallelizing some Graph Clustering techniques.  We have written a paper over this work and are currently working to submit it to different conferences.<br /><br />
 
@@ -38,6 +38,10 @@
 		 My PR for running one mile is 6:30.  This is clearly more important than research experience.
 	</p>
 </div> -->
+
+
+<canvas id="c" style="background-color: white" width="1080" height="720"></canvas>
+<script src='./sierpinski.js'></script>
 
 
 </body>
