--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <head><meta charset="utf-8" /></head>
 <body>
+    <div> CS 765 Visualization Project</div>
     <div>                        <script type="text/javascript">window.PlotlyConfig = {MathJaxConfig: 'local'};</script>
         <script type="text/javascript">/**
 * plotly.js v1.57.1
