--- a/index.html
+++ b/index.html
@@ -4,41 +4,60 @@
 
 
 <div>
-	<img src="./cameronruggles.jpg" align="left" alt="supposed to be a picture of me" width="240px" height="320px" style="transform: rotate(360deg); float: left; padding-bottom:100px; padding-right:10px">
-		<h1>Cameron Ruggles</h1>
-		<p>Purdue University, Computer Science</p>
+	<h1>Cameron Ruggles</h1>
 
-	<h2 style="font-family:Courier;">My Academic Experience</h2>
+	<h2 style="font-family:Courier;">Projects</h2>
 	<p>
-		I owe a great many thanks to <a href="https://www.cs.purdue.edu/homes/dgleich/">Prof David Gleich</a> and his graduate students at Purdue University, who have encouraged my interest in research and who have been patiently helping me get off the ground.
-
-		I worked on a project with D. Gleich and  <a href="https://www.math.purdue.edu/~lveldt/">Nate Veldt</a> involving parallelizing some Graph Clustering techniques.  We have written a paper over this work and are currently working to submit it to different conferences.<br /><br />
+		<h3> Parallel Dykstras </h3>
 
 		Link: <a href="https://arxiv.org/abs/1901.10084">https://arxiv.org/abs/1901.10084 </a><br />
 		Code: <a href="https://github.com/camruggles/ParallelDykstras">https://github.com/camruggles/ParallelDykstras</a> <br /><br />
 
 		Short Summary: In metric constrained optimization, it is possible to update multiple variables at a time without violating constraints or correctness.  I found a method that can handle O(n) variable updates at the same time, out of O(n^3) variable updates in total.<br />
 
-
-		Before this I had done some work on simulating second order markov chains on large social networks, and trying to find ways to figure out network separation of a mixed Erdos Renyi and Barabasi Albert graph.
 		<br />
 	</p>
-</div>
 
-<div>
-	<h2>Internship</h2>
-	<p>
-		 During the Summer of 2019, I worked at a company called Ciholas.  They are in the space of Ultra Wideband Networks.  My job was to implement and tweak filtering algorithms in Python to enhance sensor position data.  This involved quickly getting up to speed on multivariate gaussian distributions.  The resulting filters demonstrated better latency compared to previous, less sophisticated filters and significant improvement in location accuracy over raw data.
+		<p>
+		<h3> ActionFormer Research </h3>
+
+		Code: <a href="https://github.com/camruggles/Action-Former-Feature-Extraction">https://github.com/camruggles/Action-Former-Feature-Extraction</a> <br /><br />
+
+		Write up coming soon.
+		<br />
 	</p>
-</div>
 
+		<p>
+		<h3> LP Dieting </h3>
+
+		Code: <a href="https://github.com/camruggles/LP-Dieting">https://github.com/camruggles/LP-Dieting </a><br />
+
+		Short Summary: I downloaded some api data for nutrition labels and then fed it into an LP to make mathematically optimal diets.  I wouldn't recommend following such a diet in practice though.<br />
+		<br />
+	</p>
+
+	<p>
+		<h3> StereoVision </h3>
+
+		Code: To be pushed within 12 hours.
+		<br /> <br />
+		Short Summary: Most methods in classical computer vision require a painful process of calibrating cameras.  What if we didn't have to.  In this work I am trying out a camera matrix estimation method from the Multiple View Geometry Textbook.
+		First you estimate the fundamental matrix.  Then you decompose that into two estimated camera matrices, and then you do point triangulation.  So far fundamental matrix estitimation seems to fail due to high collinearity among sampled points.
+		My next step will be to use RANSAC or SuperPoint/SuperGlue to get better point estimations, and then consider weighing neural techniques.
+		<br />
+		<br />
+	</p>
+
+</div>
 <!-- <div>
 	<h2>Other</h2>
 	<p>
 		 My PR for running one mile is 6:30.  This is clearly more important than research experience.
 	</p>
 </div> -->
-
+<div>
+	Below is some WebGL artwork that I like.
+</div>
 
 <canvas id="c" style="background-color: white" width="1080" height="720"></canvas>
 <script src='./sierpinski.js'></script>
