updating for stereovision

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 	<p>
 		<h3> Parallel Dykstras </h3>
 
-		Link: <a href="https://arxiv.org/abs/1901.10084">https://arxiv.org/abs/1901.10084 </a><br />
-		Code: <a href="https://github.com/camruggles/ParallelDykstras">https://github.com/camruggles/ParallelDykstras</a> <br /><br />
+		Link: https://arxiv.org/abs/1901.10084 <br />
+		Code: https://github.com/camruggles/ParallelDykstras <br /><br />
 
 		Short Summary: In metric constrained optimization, it is possible to update multiple variables at a time without violating constraints or correctness.  I found a method that can handle O(n) variable updates at the same time, out of O(n^3) variable updates in total.<br />
 
@@ -21,7 +21,7 @@
 		<p>
 		<h3> ActionFormer Research </h3>
 
-		Code: <a href="https://github.com/camruggles/Action-Former-Feature-Extraction">https://github.com/camruggles/Action-Former-Feature-Extraction</a> <br /><br />
+		Code: https://github.com/camruggles/Action-Former-Feature-Extraction <br /><br />
 
 		Write up coming soon.
 		<br />
@@ -30,7 +30,7 @@
 		<p>
 		<h3> LP Dieting </h3>
 
-		Code: <a href="https://github.com/camruggles/LP-Dieting">https://github.com/camruggles/LP-Dieting </a><br />
+		Code: https://github.com/camruggles/LP-Dieting <br />
 
 		Short Summary: I downloaded some api data for nutrition labels and then fed it into an LP to make mathematically optimal diets.  I wouldn't recommend following such a diet in practice though.<br />
 		<br />
@@ -39,7 +39,7 @@
 	<p>
 		<h3> StereoVision </h3>
 
-		Code: To be pushed within 12 hours.
+		Code: https://github.com/camruggles/NoCalibrationStereoVision
 		<br /> <br />
 		Short Summary: Most methods in classical computer vision require a painful process of calibrating cameras.  What if we didn't have to.  In this work I am trying out a camera matrix estimation method from the Multiple View Geometry Textbook.
 		First you estimate the fundamental matrix.  Then you decompose that into two estimated camera matrices, and then you do point triangulation.  So far fundamental matrix estitimation seems to fail due to high collinearity among sampled points.
@@ -55,6 +55,7 @@
 		 My PR for running one mile is 6:30.  This is clearly more important than research experience.
 	</p>
 </div> -->
+<!-- 
 <div>
 	Below is some WebGL artwork that I like.
 </div>
@@ -62,6 +63,6 @@
 <canvas id="c" style="background-color: white" width="1080" height="720"></canvas>
 <script src='./sierpinski.js'></script>
 
-
+ -->
 </body>
 </html>
